# urssi_playground

./: .gitignore  README.md  pyproject.toml  secrets_uncommitted.txt  test_simple.py  urssi.sublime-workspace
.github/workflows/: ci.yml
docs/source/: conf.py  coolpage1.md
urssi_playground/: __init__.py  tools.py
urssi_playground/underground/: __init__.py  dirt.py
