[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "urssi_playground"
dependencies = []
authors = [
    {name = "Sam Evans", email = "sevans7@bu.edu"},
]
license = {text = "MIT License"}
dynamic = ["version", "description"]

[project.optional-dependencies]
testing_deps = [
    "pytest"
]